Fixed issue with Deck images displaying too large

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -25,9 +25,9 @@ body {
     padding: 0;
 }
 
-/* img {
+img {
     width: 100%;
-} */
+}
 
 a {
     text-decoration: none;
